[tool.poetry]
name = "ml-hw-1"
version = "0.1.0"
description = ""
authors = ["Чумаков Михаил Дмитриевич <mikhail.chumakov@sbermarket.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.4"
notebook = "^7.1.0"
plotly = "^5.19.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
rich = {extras = ["jupyter"], version = "^13.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
